<resources>
    <string name="app_name">PlayList Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <!--Settings screen-->
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="ask_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="link_to_share">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">k.nadonenko@ya.ru</string>
    <string name="email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="apps_not_found">Не найдено подходящих приложений</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="check_internet_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry_button">Обновить</string>

    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    // player
    <string name="track_duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="progress_time">00:00</string>

    //media library
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    //Fragment labels
    <string name="label_library">LibraryFragment</string>
    <string name="label_search">SearchFragment</string>
    <string name="label_favorites">FavoritesFragment</string>
    <string name="label_settings">SettingsFragment</string>
    <string name="label_player">AudioPlayerFragment</string>

    //Playlists
    <string name="zero_tracks">0 треков</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="playlist_name">Название плейлиста</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="name">Название*</string>
    <string name="label_newPlaylistFragment">NewPlaylistFragment</string>
    <string name="single_playlist_fragment">SinglePlayListFragment</string>
    <string name="list_playlist_fragment">ListPlayListFragment</string>

    <string name="gallery_permission_message">Необходимо разрешение для просмотра галереи</string>
    <string name="playlist">Плейлист</string>
    <string name="my_playlists">my_playlists</string>
    <string name="created">создан</string>
    <string name="added">Добавлено в плейлист %1$s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="title_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="nothing_added">Вы ещё не добавили ни одного трека</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="save_info">Сохранить</string>
    <string name="delete">Удалить плейлист</string>
    <string name="share_empty_play_list">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <plurals name="tracks">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>