<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/libraryFragment">
    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.example.playlistmaker.library.ui.LibraryFragment"
        android:label="@string/label_library"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.example.playlistmaker.player.ui.PlayerFragment"
        android:label="@string/label_player"
        tools:layout="@layout/fragment_player"/>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.search.ui.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/search_to_player_action"
            app:destination="@id/audioPlayerFragment"

            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/side_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>