<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            style="@style/header_text"
            android:text="@string/app_name" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        android:padding="@dimen/common_margin">

        <Button
            android:id="@+id/search_button"
            style="@style/button_main"
            android:layout_marginBottom="16dp"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/media_button"
            style="@style/button_main"
            android:layout_marginBottom="16dp"
            android:text="@string/library"
            app:icon="@drawable/library" />

        <Button
            android:id="@+id/settings_button"
            style="@style/button_main"
            android:text="@string/settings"
            app:icon="@drawable/settings" />

    </LinearLayout>

</LinearLayout>