<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_main_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="24dp"
        app:navigationIcon="@drawable/arrow_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/header_text_size" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="@dimen/settings_btn_padding_vertical"
        android:paddingStart="@dimen/common_margin"
        android:paddingEnd="8dp"
        android:text="@string/dark_theme"
        android:textAllCaps="false"
        android:textColor="@color/settings_text_color"
        android:textSize="@dimen/settings_text_size"
        app:thumbTint="@color/grey"
        app:trackTint="@color/light_grey"
        android:thumbTint="@color/settings_switch"
        android:trackTint="@color/settings_switch"/>

    <Button
        android:id="@+id/button_sharing"
        style="@style/button_borderless"
        android:text="@string/share_app"
        app:icon="@drawable/share" />

    <Button
        android:id="@+id/button_support"
        style="@style/button_borderless"
        android:text="@string/ask_support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/button_user_agreement"
        style="@style/button_borderless"
        android:text="@string/user_agreement"
        android:textSize="@dimen/settings_text_size"
        app:icon="@drawable/arrow_forward" />

</LinearLayout>