<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/settings_main_color"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="24dp"
        app:navigationIcon="@drawable/arrow_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/header_text_size" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/common_margin">

        <EditText
            android:id="@+id/input_search_form"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableTint="@color/settings_icon_color"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:inputType="text"
            android:lines="1"
            android:padding="@dimen/small_padding"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="32dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/settings_icon_color"
            android:textFontWeight="400"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:id="@+id/clear_form"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/clear_search"
            app:tint="@color/settings_icon_color" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="@dimen/progress_bar_44"
            android:layout_height="@dimen/progress_bar_44"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            tools:visibility="visible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_btn_padding_vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:visibility="gone"
            tools:listitem="@layout/search_item">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/placeholderNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="20dp"
            android:text="@string/nothing_found"
            android:textAlignment="center"
            android:textColor="@color/settings_text_color"
            android:textSize="19sp"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/not_found" />

        <LinearLayout
            android:id="@+id/placeholderCommunication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/connection_problem"
                android:src="@drawable/no_internet" />

            <TextView
                style="@style/ErrorTextPlaceholder"
                android:text="@string/connection_problem" />

            <TextView
                style="@style/ErrorTextPlaceholder"
                android:text="@string/check_internet_connection" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retryButton"
                style="@style/ErrorButtonPlaceholder"
                android:text="@string/retry_button"
                app:cornerRadius="54dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/search_history"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/text_size_18" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/search_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear_history"
                style="@style/ErrorButtonPlaceholder"
                android:layout_margin="@dimen/margin_24"

                android:inputType="textCapSentences"
                android:text="@string/clear_history" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>